[package]
name = "yasgs"
version = "0.1.1"
edition = "2021"
authors = ["Marty3000"]
description = "Yet another sudoku game solver"
license = "MIT"
repository = "https://github.com/Marty3000/yasgs.git"
documentation = "https://docs.rs/yasgs"
keywords = ["sudoku"]
categories = ["games"]

[dependencies]
